// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image :base 1`] = `
<main>
  <t-image>
    <wx-view
      class="class t-class t-image"
      style=""
    >
      <wx-view
        ariaHidden="{{false}}"
        class="t-image__mask t-image--loading t-image--shape-square"
        style=""
      >
        <t-loading
          tClass="t-class-load"
          tClassText="t-image--loading-text"
        >
          <wx-view
            class="class t-class t-loading t-loading--horizontal "
            style="color: inherit;"
          >
            <wx-view
              ariaLabel="加载中"
              ariaRole="img"
              class="t-class-indicator t-loading__spinner t-loading__spinner--dots "
              style="width: 44rpx; height: 44rpx; color: inherit;  animation-duration: 0.8s; animation-play-state: running;"
            >
              <wx-view
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay:0s; animation-play-state: running;"
              />
              <wx-view
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay:0.26666666666666666s; animation-play-state: running;"
              />
              <wx-view
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay:0.5333333333333333s; animation-play-state: running;"
              />
            </wx-view>
            <wx-view
              ariaHidden="{{true}}"
              ariaLabel=""
              class="t-loading__text t-loading__text--horizontal t-class-text"
            />
          </wx-view>
        </t-loading>
      </wx-view>
      <wx-image
        ariaHidden="{{true}}"
        ariaLabel=""
        class="t-image__img t-image--shape-square t-image--lazy t-class-image"
        id="image"
        lazyLoad="{{false}}"
        mode="scaleToFill"
        showMenuByLongpress="{{false}}"
        src=""
        style=""
        webp="{{false}}"
        bind:error="onLoadError"
        bind:load="onLoaded"
      />
    </wx-view>
  </t-image>
</main>
`;

exports[`image :success 1`] = `
<main>
  <t-image
    id="root"
    bind:load="handleLoad"
  >
    <wx-view
      class="class t-class t-image"
      style=""
    >
      <wx-image
        ariaHidden="{{false}}"
        ariaLabel=""
        class="t-image__img t-image--shape-square  t-class-image"
        id="image"
        lazyLoad="{{false}}"
        mode="heightFix"
        showMenuByLongpress="{{false}}"
        src="https://www.tencent.com/img/index/menu_logo.png"
        style="height: 0px; width: 0.00px;"
        webp="{{false}}"
        bind:error="onLoadError"
        bind:load="onLoaded"
      />
    </wx-view>
  </t-image>
</main>
`;
